--- a/doc/examples/config.yml
+++ b/doc/examples/config.yml
@@ -14,3 +14,9 @@ providers:
       path: "/app/other.local.yml"
   docker:
     type: docker
+
+fallback:
+  enable: true
+  nameservers: # when no record found, forward to these DNS servers
+    - 8.8.8.8
+    - 1.1.1.1
